# multimodal-vid-analysis

./: .gitignore  Dockerfile  README.md  create_video_embeddings.py  get_video_frames.py  package-lock.json  package.json  pyproject.toml  requirements.txt  tailwind.config.js  visual_pipeline.py  visual_search.py
api/: index.py
api/utils/: transcript_utils.py  visual_pipeline_utils.py  youtube.com_cookies.txt
app/: page.tsx
frontend/: README.md  next.config.js  package-lock.json  tailwind.config.js
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: ChatInterface.tsx  VideoAnalysis.tsx  VideoPlayer.tsx  VisualQuery.tsx
server/: main.py  test.py  transcript_utils.py
server/transcript_api/: main.py
server/utils/: transcript_utils.py
