[tool.poetry]
name = "multimodal-vid-analysis"
version = "0.1.0"
description = ""
authors = ["Taha Abdullah", "Manthan Desai", "Youssef Qteishat"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
yt-dlp = "*"
ffmpeg-python = "*"
opencv-python = "*"
numpy = "*"
pillow = "*"
langchain-core = "*"
langchain-chroma = "^0.2.4"
transformers = "*"
torch = "*"
fastapi = "*"
uvicorn = "*"
